2004-01-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (pixmap_DATA): Added shapes.svg; a colour-blind
	friendly theme.

2004-01-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.schemas.in:
	* glines.h:
	* glines.c: Remember the window size. Removed some unused
	code. Reworked the layout of the "Next balls" and "Score" 
	section.

2004-01-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Minor bug fixes fom previous work: "Next Balls" is
	bold again. The expose code doesn't miss tiles anymore.

2004-01-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.schemas.in: Set balls.svg to be the new default since it
	shows off the resizing routines to the best advantage.

	* glines.c: The resizing work is basically finished. The window
	size isn't remembered yet and there is an expose bug when a window
	is dragged quickly across it. Aside from that it works well.

2004-01-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: More resizing work and switch over to using the
	GamesGridFrame widget to save having to account for offsets in all
	the drawing functions.

2004-01-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Replaced the home-grown clamp function with
	glibs. Also started to rework the code to handle a resizeable
	window.

	* help/C/glines.xml: Updated the theme-creation section.

2004-01-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (load_image): 	
	* Makefile.am (pixmap_DATA): Replace ball.png with
	balls.svg. Include a bit of logic to make the transition painless.

2004-01-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (load_image): Rescale graphics to fit. The graphics now
	just have to fit a 4x7 grid. This means that we now support SVG
	properly.

2003-12-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Fix attempts to do an expose event before the
	configure event. Remember to connect the configure and expose